# tp_final_nlp

./: README.md  pyproject.toml  trabalho_final_victor_thury.ipynb
download_e_extracao_de_texto/: check_if_image.py  main.py  sanitizacao.py
pickles/: data.pkl  data_sanitized.pkl  instruções.pkl
